// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests nothing checked 1`] = `
<DocumentFragment>
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="ui segment"
      >
        <div
          class="ui message"
        >
          <h2
            class="header"
          >
            Welcome
          </h2>
          <p>
            CITE provides visualization of ligand-receptor (LR) signaling interactions within the tumor microenvironment (TME).
          </p>
          <p>
            <b>
              Example:-
            </b>
            <br />
            If you are interested in the 
            <u>
              AREG-EGFR
            </u>
             interaction in 
            <u>
              glioblastoma (GBM) and lower-grade glioma (LGG)
            </u>
            , then you select the respective ligand, receptor and cancer types. You can hover over the individual cells to see the specific values of RC scores. The heatmap of the RC scores for AREG-EGFR pair in GBM and LGG shows a 
            <u>
              very high SC (stroma-to-cancer) score
            </u>
             for this pair, indicating that tumor infiltrating stromal cells over-express the ligand AREG, activating over-expressed EGFR in cancer cells.
          </p>
          <button
            class="ui mini button"
            data-testid="exampleButton"
            role="button"
          >
            Try example
          </button>
          <button
            class="ui mini button css-k4wnm0"
          >
            Take a tour    
            <i
              aria-hidden="true"
              class="rocket icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="ui centered cards"
        data-tour="filter"
      >
        <div
          class="ui card"
        >
          <div
            class="content"
          >
            <div
              class="meta css-106mbhu"
            >
              <span>
                <i
                  aria-hidden="true"
                  class="filter icon"
                />
                 Ligands
              </span>
            </div>
            <div
              class="description"
            >
              <form
                class="ui form css-1rrhbx0"
              >
                <div
                  class="field"
                >
                  <div
                    class="ui left icon input"
                    data-testid="0_filterInput"
                    data-tour="0_filterInput"
                  >
                    <input
                      type="text"
                      value=""
                    />
                    <i
                      aria-hidden="true"
                      class="search icon"
                    />
                  </div>
                </div>
              </form>
              <div
                class="ui items css-p5nlxd"
                data-tour="0_checkbox-list"
              >
                <div
                  data-testid="0_checkbox-list"
                >
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="A2M"
                          >
                            <input
                              class="hidden"
                              name="A2M_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="A2M_checkbox"
                            >
                              A2M
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="AANAT"
                          >
                            <input
                              class="hidden"
                              name="AANAT_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="AANAT_checkbox"
                            >
                              AANAT
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ADAM12"
                          >
                            <input
                              class="hidden"
                              name="ADAM12_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ADAM12_checkbox"
                            >
                              ADAM12
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ADAM15"
                          >
                            <input
                              class="hidden"
                              name="ADAM15_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ADAM15_checkbox"
                            >
                              ADAM15
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ADAM17"
                          >
                            <input
                              class="hidden"
                              name="ADAM17_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ADAM17_checkbox"
                            >
                              ADAM17
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="extra content"
          >
            <button
              class="ui mini icon disabled right labeled button"
              data-testid="0_resetButton"
              data-tour="0_resetButton"
              disabled=""
              tabindex="-1"
            >
              <i
                aria-hidden="true"
                class="undo icon"
              />
              Reset Filter
            </button>
            <div
              class="ui right floated statistic xs"
              data-testid="0_statistic"
              data-tour="0_statistic"
            >
              <div
                class="value"
              >
                0 / 5
              </div>
              <div
                class="label"
              >
                filtered
              </div>
            </div>
          </div>
        </div>
        <div
          class="ui card"
        >
          <div
            class="content"
          >
            <div
              class="meta css-106mbhu"
            >
              <span>
                <i
                  aria-hidden="true"
                  class="filter icon"
                />
                 Receptors
              </span>
            </div>
            <div
              class="description"
            >
              <form
                class="ui form css-1rrhbx0"
              >
                <div
                  class="field"
                >
                  <div
                    class="ui left icon input"
                    data-testid="1_filterInput"
                    data-tour="1_filterInput"
                  >
                    <input
                      type="text"
                      value=""
                    />
                    <i
                      aria-hidden="true"
                      class="search icon"
                    />
                  </div>
                </div>
              </form>
              <div
                class="ui items css-p5nlxd"
                data-tour="1_checkbox-list"
              >
                <div
                  data-testid="1_checkbox-list"
                >
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACKR2"
                          >
                            <input
                              class="hidden"
                              name="ACKR2_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACKR2_checkbox"
                            >
                              ACKR2
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACKR3"
                          >
                            <input
                              class="hidden"
                              name="ACKR3_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACKR3_checkbox"
                            >
                              ACKR3
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACKR4"
                          >
                            <input
                              class="hidden"
                              name="ACKR4_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACKR4_checkbox"
                            >
                              ACKR4
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACVR1"
                          >
                            <input
                              class="hidden"
                              name="ACVR1_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACVR1_checkbox"
                            >
                              ACVR1
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACVR1B"
                          >
                            <input
                              class="hidden"
                              name="ACVR1B_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACVR1B_checkbox"
                            >
                              ACVR1B
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="extra content"
          >
            <button
              class="ui mini icon disabled right labeled button"
              data-testid="1_resetButton"
              data-tour="1_resetButton"
              disabled=""
              tabindex="-1"
            >
              <i
                aria-hidden="true"
                class="undo icon"
              />
              Reset Filter
            </button>
            <div
              class="ui right floated statistic xs"
              data-testid="1_statistic"
              data-tour="1_statistic"
            >
              <div
                class="value"
              >
                0 / 5
              </div>
              <div
                class="label"
              >
                filtered
              </div>
            </div>
          </div>
        </div>
        <div
          class="ui card"
        >
          <div
            class="content"
          >
            <div
              class="meta css-106mbhu"
            >
              <span>
                <i
                  aria-hidden="true"
                  class="filter icon"
                />
                 Interaction type
              </span>
              <i
                aria-hidden="true"
                class="info circle icon"
              />
            </div>
            <div
              class="description"
            >
              <form
                class="ui form css-1rrhbx0"
              >
                <div
                  class="field"
                >
                  <div
                    class="ui left icon input"
                    data-testid="2_filterInput"
                    data-tour="2_filterInput"
                  >
                    <input
                      type="text"
                      value=""
                    />
                    <i
                      aria-hidden="true"
                      class="search icon"
                    />
                  </div>
                </div>
              </form>
              <div
                class="ui items css-p5nlxd"
                data-tour="2_checkbox-list"
              >
                <div
                  data-testid="2_checkbox-list"
                >
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="cc"
                          >
                            <input
                              class="hidden"
                              name="cc_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="cc_checkbox"
                            >
                              cc
                            </label>
                            <small>
                              cancer-cancer
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="cs"
                          >
                            <input
                              class="hidden"
                              name="cs_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="cs_checkbox"
                            >
                              cs
                            </label>
                            <small>
                              cancer-stroma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="nn"
                          >
                            <input
                              class="hidden"
                              name="nn_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="nn_checkbox"
                            >
                              nn
                            </label>
                            <small>
                              normal-normal
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="sc"
                          >
                            <input
                              class="hidden"
                              name="sc_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="sc_checkbox"
                            >
                              sc
                            </label>
                            <small>
                              stroma-cancer
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ss"
                          >
                            <input
                              class="hidden"
                              name="ss_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ss_checkbox"
                            >
                              ss
                            </label>
                            <small>
                              stroma-stroma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="extra content"
          >
            <button
              class="ui mini icon disabled right labeled button"
              data-testid="2_resetButton"
              data-tour="2_resetButton"
              disabled=""
              tabindex="-1"
            >
              <i
                aria-hidden="true"
                class="undo icon"
              />
              Reset Filter
            </button>
            <div
              class="ui right floated statistic xs"
              data-testid="2_statistic"
              data-tour="2_statistic"
            >
              <div
                class="value"
              >
                0 / 5
              </div>
              <div
                class="label"
              >
                filtered
              </div>
            </div>
          </div>
        </div>
        <div
          class="ui card"
        >
          <div
            class="content"
          >
            <div
              class="meta css-106mbhu"
            >
              <span>
                <i
                  aria-hidden="true"
                  class="filter icon"
                />
                 Tumor type
              </span>
            </div>
            <div
              class="description"
            >
              <form
                class="ui form css-1rrhbx0"
              >
                <div
                  class="field"
                >
                  <div
                    class="ui left icon input"
                    data-testid="3_filterInput"
                    data-tour="3_filterInput"
                  >
                    <input
                      type="text"
                      value=""
                    />
                    <i
                      aria-hidden="true"
                      class="search icon"
                    />
                  </div>
                </div>
              </form>
              <div
                class="ui items css-p5nlxd"
                data-tour="3_checkbox-list"
              >
                <div
                  data-testid="3_checkbox-list"
                >
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="BLCA"
                          >
                            <input
                              class="hidden"
                              name="BLCA_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="BLCA_checkbox"
                            >
                              BLCA
                            </label>
                            <small>
                              Bladder Urothelial Carcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="BRCA"
                          >
                            <input
                              class="hidden"
                              name="BRCA_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="BRCA_checkbox"
                            >
                              BRCA
                            </label>
                            <small>
                              Breast invasive carcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="CESC"
                          >
                            <input
                              class="hidden"
                              name="CESC_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="CESC_checkbox"
                            >
                              CESC
                            </label>
                            <small>
                              Cervical squamous cell carcinoma and endocervical adenocarcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="CRC"
                          >
                            <input
                              class="hidden"
                              name="CRC_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="CRC_checkbox"
                            >
                              CRC
                            </label>
                            <small>
                              Colorectal carcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ESCA"
                          >
                            <input
                              class="hidden"
                              name="ESCA_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ESCA_checkbox"
                            >
                              ESCA
                            </label>
                            <small>
                              Esophageal carcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="GBM"
                          >
                            <input
                              class="hidden"
                              name="GBM_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="GBM_checkbox"
                            >
                              GBM
                            </label>
                            <small>
                              Glioblastoma multiforme
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="extra content"
          >
            <button
              class="ui mini icon disabled right labeled button"
              data-testid="3_resetButton"
              data-tour="3_resetButton"
              disabled=""
              tabindex="-1"
            >
              <i
                aria-hidden="true"
                class="undo icon"
              />
              Reset Filter
            </button>
            <div
              class="ui right floated statistic xs"
              data-testid="3_statistic"
              data-tour="3_statistic"
            >
              <div
                class="value"
              >
                0 / 6
              </div>
              <div
                class="label"
              >
                filtered
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="css-1pnad6s"
      >
        <div
          class="ui compact segment css-1d6gp5m"
          data-tour="summary"
        >
          <div
            class="css-1nny79i"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="value"
              >
                25
              </div>
              <small>
                Total
              </small>
            </div>
            <div
              class="ui mini statistic"
            >
              <div
                class="value"
              >
                1-12
              </div>
              <small>
                Showing
              </small>
            </div>
          </div>
          <label>
            Ligand-Receptor Combinations
          </label>
        </div>
        <div
          class="ui segment css-1d6gp5m"
        >
          <div
            class="css-1au1m76"
            data-tour="colobar"
          >
            <div
              style="width: 100%; height: 100%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  />
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="ui centered doubling cards css-1iidtr2"
        data-tour="heatmapcards"
      >
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    A2M
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR2
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    A2M
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR3
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    A2M
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR4
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    A2M
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACVR1
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    A2M
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACVR1B
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    AANAT
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR2
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    AANAT
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR3
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    AANAT
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR4
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    AANAT
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACVR1
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    AANAT
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACVR1B
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ADAM12
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR2
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ADAM12
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR3
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="ui center aligned container"
      >
        <div
          aria-label="Pagination Navigation"
          class="ui pagination pointing secondary pagination menu"
          role="navigation"
        >
          <a
            aria-current="false"
            aria-disabled="false"
            aria-label="First item"
            class="item"
            tabindex="0"
            type="firstItem"
            value="1"
          >
            «
          </a>
          <a
            aria-current="false"
            aria-disabled="false"
            aria-label="Previous item"
            class="item"
            tabindex="0"
            type="prevItem"
            value="1"
          >
            ⟨
          </a>
          <a
            aria-current="true"
            aria-disabled="false"
            class="active item"
            tabindex="0"
            type="pageItem"
            value="1"
          >
            1
          </a>
          <a
            aria-current="false"
            aria-disabled="false"
            class="item"
            tabindex="0"
            type="pageItem"
            value="2"
          >
            2
          </a>
          <a
            aria-current="false"
            aria-disabled="false"
            class="item"
            tabindex="0"
            type="pageItem"
            value="3"
          >
            3
          </a>
          <a
            aria-current="false"
            aria-disabled="false"
            aria-label="Next item"
            class="item"
            tabindex="0"
            type="nextItem"
            value="2"
          >
            ⟩
          </a>
          <a
            aria-current="false"
            aria-disabled="false"
            aria-label="Last item"
            class="item"
            tabindex="0"
            type="lastItem"
            value="3"
          >
            »
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot tests one per group is checked 1`] = `
<DocumentFragment>
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="ui segment"
      >
        <div
          class="ui message"
        >
          <h2
            class="header"
          >
            Welcome
          </h2>
          <p>
            CITE provides visualization of ligand-receptor (LR) signaling interactions within the tumor microenvironment (TME).
          </p>
          <p>
            <b>
              Example:-
            </b>
            <br />
            If you are interested in the 
            <u>
              AREG-EGFR
            </u>
             interaction in 
            <u>
              glioblastoma (GBM) and lower-grade glioma (LGG)
            </u>
            , then you select the respective ligand, receptor and cancer types. You can hover over the individual cells to see the specific values of RC scores. The heatmap of the RC scores for AREG-EGFR pair in GBM and LGG shows a 
            <u>
              very high SC (stroma-to-cancer) score
            </u>
             for this pair, indicating that tumor infiltrating stromal cells over-express the ligand AREG, activating over-expressed EGFR in cancer cells.
          </p>
          <button
            class="ui mini button"
            data-testid="exampleButton"
            role="button"
          >
            Try example
          </button>
          <button
            class="ui mini button css-k4wnm0"
          >
            Take a tour    
            <i
              aria-hidden="true"
              class="rocket icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="ui centered cards"
        data-tour="filter"
      >
        <div
          class="ui card"
        >
          <div
            class="content"
          >
            <div
              class="meta css-106mbhu"
            >
              <span>
                <i
                  aria-hidden="true"
                  class="filter icon"
                />
                 Ligands
              </span>
            </div>
            <div
              class="description"
            >
              <form
                class="ui form css-1rrhbx0"
              >
                <div
                  class="field"
                >
                  <div
                    class="ui left icon input"
                    data-testid="0_filterInput"
                    data-tour="0_filterInput"
                  >
                    <input
                      type="text"
                      value=""
                    />
                    <i
                      aria-hidden="true"
                      class="search icon"
                    />
                  </div>
                </div>
              </form>
              <div
                class="ui items css-p5nlxd"
                data-tour="0_checkbox-list"
              >
                <div
                  data-testid="0_checkbox-list"
                >
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checked checkbox"
                            data-testid="ADAM15"
                          >
                            <input
                              checked=""
                              class="hidden"
                              name="ADAM15_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ADAM15_checkbox"
                            >
                              ADAM15
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1fj4a12"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="A2M"
                          >
                            <input
                              class="hidden"
                              name="A2M_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="A2M_checkbox"
                            >
                              A2M
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1fj4a12"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="AANAT"
                          >
                            <input
                              class="hidden"
                              name="AANAT_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="AANAT_checkbox"
                            >
                              AANAT
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1fj4a12"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ADAM12"
                          >
                            <input
                              class="hidden"
                              name="ADAM12_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ADAM12_checkbox"
                            >
                              ADAM12
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1fj4a12"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ADAM17"
                          >
                            <input
                              class="hidden"
                              name="ADAM17_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ADAM17_checkbox"
                            >
                              ADAM17
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="extra content"
          >
            <button
              class="ui mini icon right labeled button"
              data-testid="0_resetButton"
              data-tour="0_resetButton"
            >
              <i
                aria-hidden="true"
                class="undo icon"
              />
              Reset Filter
            </button>
            <div
              class="ui right floated statistic xs"
              data-testid="0_statistic"
              data-tour="0_statistic"
            >
              <div
                class="value"
              >
                1 / 5
              </div>
              <div
                class="label"
              >
                filtered
              </div>
            </div>
          </div>
        </div>
        <div
          class="ui card"
        >
          <div
            class="content"
          >
            <div
              class="meta css-106mbhu"
            >
              <span>
                <i
                  aria-hidden="true"
                  class="filter icon"
                />
                 Receptors
              </span>
            </div>
            <div
              class="description"
            >
              <form
                class="ui form css-1rrhbx0"
              >
                <div
                  class="field"
                >
                  <div
                    class="ui left icon input"
                    data-testid="1_filterInput"
                    data-tour="1_filterInput"
                  >
                    <input
                      type="text"
                      value=""
                    />
                    <i
                      aria-hidden="true"
                      class="search icon"
                    />
                  </div>
                </div>
              </form>
              <div
                class="ui items css-p5nlxd"
                data-tour="1_checkbox-list"
              >
                <div
                  data-testid="1_checkbox-list"
                >
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checked checkbox"
                            data-testid="ACKR4"
                          >
                            <input
                              checked=""
                              class="hidden"
                              name="ACKR4_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACKR4_checkbox"
                            >
                              ACKR4
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1fj4a12"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACKR2"
                          >
                            <input
                              class="hidden"
                              name="ACKR2_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACKR2_checkbox"
                            >
                              ACKR2
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1fj4a12"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACKR3"
                          >
                            <input
                              class="hidden"
                              name="ACKR3_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACKR3_checkbox"
                            >
                              ACKR3
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1fj4a12"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACVR1"
                          >
                            <input
                              class="hidden"
                              name="ACVR1_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACVR1_checkbox"
                            >
                              ACVR1
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-1fj4a12"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ACVR1B"
                          >
                            <input
                              class="hidden"
                              name="ACVR1B_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ACVR1B_checkbox"
                            >
                              ACVR1B
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="extra content"
          >
            <button
              class="ui mini icon right labeled button"
              data-testid="1_resetButton"
              data-tour="1_resetButton"
            >
              <i
                aria-hidden="true"
                class="undo icon"
              />
              Reset Filter
            </button>
            <div
              class="ui right floated statistic xs"
              data-testid="1_statistic"
              data-tour="1_statistic"
            >
              <div
                class="value"
              >
                1 / 5
              </div>
              <div
                class="label"
              >
                filtered
              </div>
            </div>
          </div>
        </div>
        <div
          class="ui card"
        >
          <div
            class="content"
          >
            <div
              class="meta css-106mbhu"
            >
              <span>
                <i
                  aria-hidden="true"
                  class="filter icon"
                />
                 Interaction type
              </span>
              <i
                aria-hidden="true"
                class="info circle icon"
              />
            </div>
            <div
              class="description"
            >
              <form
                class="ui form css-1rrhbx0"
              >
                <div
                  class="field"
                >
                  <div
                    class="ui left icon input"
                    data-testid="2_filterInput"
                    data-tour="2_filterInput"
                  >
                    <input
                      type="text"
                      value=""
                    />
                    <i
                      aria-hidden="true"
                      class="search icon"
                    />
                  </div>
                </div>
              </form>
              <div
                class="ui items css-p5nlxd"
                data-tour="2_checkbox-list"
              >
                <div
                  data-testid="2_checkbox-list"
                >
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checked checkbox"
                            data-testid="cs"
                          >
                            <input
                              checked=""
                              class="hidden"
                              name="cs_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="cs_checkbox"
                            >
                              cs
                            </label>
                            <small>
                              cancer-stroma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="cc"
                          >
                            <input
                              class="hidden"
                              name="cc_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="cc_checkbox"
                            >
                              cc
                            </label>
                            <small>
                              cancer-cancer
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="nn"
                          >
                            <input
                              class="hidden"
                              name="nn_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="nn_checkbox"
                            >
                              nn
                            </label>
                            <small>
                              normal-normal
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="sc"
                          >
                            <input
                              class="hidden"
                              name="sc_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="sc_checkbox"
                            >
                              sc
                            </label>
                            <small>
                              stroma-cancer
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ss"
                          >
                            <input
                              class="hidden"
                              name="ss_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ss_checkbox"
                            >
                              ss
                            </label>
                            <small>
                              stroma-stroma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="extra content"
          >
            <button
              class="ui mini icon right labeled button"
              data-testid="2_resetButton"
              data-tour="2_resetButton"
            >
              <i
                aria-hidden="true"
                class="undo icon"
              />
              Reset Filter
            </button>
            <div
              class="ui right floated statistic xs"
              data-testid="2_statistic"
              data-tour="2_statistic"
            >
              <div
                class="value"
              >
                1 / 5
              </div>
              <div
                class="label"
              >
                filtered
              </div>
            </div>
          </div>
        </div>
        <div
          class="ui card"
        >
          <div
            class="content"
          >
            <div
              class="meta css-106mbhu"
            >
              <span>
                <i
                  aria-hidden="true"
                  class="filter icon"
                />
                 Tumor type
              </span>
            </div>
            <div
              class="description"
            >
              <form
                class="ui form css-1rrhbx0"
              >
                <div
                  class="field"
                >
                  <div
                    class="ui left icon input"
                    data-testid="3_filterInput"
                    data-tour="3_filterInput"
                  >
                    <input
                      type="text"
                      value=""
                    />
                    <i
                      aria-hidden="true"
                      class="search icon"
                    />
                  </div>
                </div>
              </form>
              <div
                class="ui items css-p5nlxd"
                data-tour="3_checkbox-list"
              >
                <div
                  data-testid="3_checkbox-list"
                >
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checked checkbox"
                            data-testid="CESC"
                          >
                            <input
                              checked=""
                              class="hidden"
                              name="CESC_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="CESC_checkbox"
                            >
                              CESC
                            </label>
                            <small>
                              Cervical squamous cell carcinoma and endocervical adenocarcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="BLCA"
                          >
                            <input
                              class="hidden"
                              name="BLCA_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="BLCA_checkbox"
                            >
                              BLCA
                            </label>
                            <small>
                              Bladder Urothelial Carcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="BRCA"
                          >
                            <input
                              class="hidden"
                              name="BRCA_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="BRCA_checkbox"
                            >
                              BRCA
                            </label>
                            <small>
                              Breast invasive carcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="CRC"
                          >
                            <input
                              class="hidden"
                              name="CRC_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="CRC_checkbox"
                            >
                              CRC
                            </label>
                            <small>
                              Colorectal carcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="ESCA"
                          >
                            <input
                              class="hidden"
                              name="ESCA_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="ESCA_checkbox"
                            >
                              ESCA
                            </label>
                            <small>
                              Esophageal carcinoma
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-tescqt"
                  >
                    <div
                      class="item"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <div
                            class="ui checkbox"
                            data-testid="GBM"
                          >
                            <input
                              class="hidden"
                              name="GBM_checkbox"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              for="GBM_checkbox"
                            >
                              GBM
                            </label>
                            <small>
                              Glioblastoma multiforme
                            </small>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="extra content"
          >
            <button
              class="ui mini icon right labeled button"
              data-testid="3_resetButton"
              data-tour="3_resetButton"
            >
              <i
                aria-hidden="true"
                class="undo icon"
              />
              Reset Filter
            </button>
            <div
              class="ui right floated statistic xs"
              data-testid="3_statistic"
              data-tour="3_statistic"
            >
              <div
                class="value"
              >
                1 / 6
              </div>
              <div
                class="label"
              >
                filtered
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="css-1pnad6s"
      >
        <div
          class="ui compact segment css-1d6gp5m"
          data-tour="summary"
        >
          <div
            class="css-1nny79i"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="value"
              >
                1
              </div>
              <small>
                Total
              </small>
            </div>
            <div
              class="ui mini statistic"
            >
              <div
                class="value"
              >
                1-1
              </div>
              <small>
                Showing
              </small>
            </div>
          </div>
          <label>
            Ligand-Receptor Combinations
          </label>
        </div>
        <div
          class="ui segment css-1d6gp5m"
        >
          <div
            class="css-1au1m76"
            data-tour="colobar"
          >
            <div
              style="width: 100%; height: 100%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  />
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="ui centered doubling cards css-1iidtr2"
        data-tour="heatmapcards"
      >
        <div
          class="ui card css-1q0psf9"
          data-testid="displayCard"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <div
                class="ui two statistics"
              >
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ADAM15
                  </div>
                  <div
                    class="label"
                  >
                    Ligand
                  </div>
                </div>
                <div
                  class="ui statistic xs"
                >
                  <div
                    class="value"
                  >
                    ACKR4
                  </div>
                  <div
                    class="label"
                  >
                    Receptor
                  </div>
                </div>
              </div>
            </div>
            <div
              class="description css-1vhobuo"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="centered row"
  >
    <div
      class="sixteen wide computer sixteen wide large screen sixteen wide mobile sixteen wide tablet fourteen wide widescreen column css-u03goq"
    >
      <div
        class="ui center aligned container"
      >
        <div
          aria-label="Pagination Navigation"
          class="ui pagination pointing secondary pagination menu"
          role="navigation"
        >
          <a
            aria-current="false"
            aria-disabled="false"
            aria-label="First item"
            class="item"
            tabindex="0"
            type="firstItem"
            value="1"
          >
            «
          </a>
          <a
            aria-current="false"
            aria-disabled="false"
            aria-label="Previous item"
            class="item"
            tabindex="0"
            type="prevItem"
            value="1"
          >
            ⟨
          </a>
          <a
            aria-current="true"
            aria-disabled="false"
            class="active item"
            tabindex="0"
            type="pageItem"
            value="1"
          >
            1
          </a>
          <a
            aria-current="false"
            aria-disabled="false"
            aria-label="Next item"
            class="item"
            tabindex="0"
            type="nextItem"
            value="1"
          >
            ⟩
          </a>
          <a
            aria-current="false"
            aria-disabled="false"
            aria-label="Last item"
            class="item"
            tabindex="0"
            type="lastItem"
            value="1"
          >
            »
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
